ilk harf denetimi performans calismasi. kelime sinifina bazi kucuk eklentiler. dil icin minimal jar ant gorevi default kayit seviyesi WARNING

--- a/trunk/zemberek2/src/cekirdek/zemberek_tr.properties
+++ b/trunk/zemberek2/src/cekirdek/zemberek_tr.properties
@@ -2,6 +2,8 @@ oneri.deasciifierKullan=true
 oneri.kisaltmaKullan=true
 oneri.bilesikKelimeKullan=true
 oneri.max=12
+denetleme.cepKullan=true
+genel.kayitSeviyesi=WARNING
 
 # asagidaki ozellik true yapilirsa sistem bilgi dosyalarina disaridan erismeye calisir.
 # bilgi parametrelerinin tanimlanmis olmasi gerekir.
