--- a/wiki/CesitliDokumanlar.wiki
+++ b/wiki/CesitliDokumanlar.wiki
@@ -1,4 +1,4 @@
-#Cesitli dokumanlar.
+Cesitli dokumanlar.
 
 
 * [http://docs.google.com/Doc?id=ah8p92nkjzcw_8dhssst Zemberek projesinin indirilmesi ve farkli Java gelistirme ortamlarinda acilmasi]
@@ -8,5 +8,4 @@
 * [http://docs.google.com/Doc?id=ah8p92nkjzcw_13c7zfq9 Turk Dili gelistirici Belgesi]
 
 * [http://docs.google.com/Doc?id=ah8p92nkjzcw_18d5bv6d Soru-Cevap]
-
 
