--- a/trunk/mozzemberek/TODO
+++ b/trunk/mozzemberek/TODO
@@ -1,4 +1,4 @@
 * Add platform entry into install.rdf
 * Add extension icon
-* Make servername and port of Zemberek server confiurable
+* Make servername and port of Zemberek server confiurable (check prefs by defult)
 * Add a conflict dependency with tr-spell UUID: tr@dictionaries.addons.mozilla.org
